--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
 	<string name="app_name">GazzaLadra</string>
 	<string name="action_settings">Settings</string>
 	<string name="title_activity_session">SessionActivity</string>
+	<string name="title_activity_quiz">QuizActivity</string>
+
+	<!-- TODO: Remove or change this placeholder text -->
+	<string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
